# streamlit-apps

./: .env.example  .gitignore  pyproject.toml
notebooks/: eur-lex.europa.eu.json.meta.json  html_parser.ipynb  llm-ollama.ipynb  site-analyzer.ipynb
