[project]
name = "streamlit-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.6",
    "langfuse>=3.2.1",
]

[dependency-groups]
dev = [
    "notebook>=7.4.4",
]
