[project]
name = "streamlit-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.1",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.6",
    "langfuse>=3.2.1",
    "lxml>=5.4.0",
    "lxml-html-clean>=0.4.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "notebook>=7.4.4",
]
